# coral-reef-scope

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  EXPLORED_SOLUTIONS.md  LLM.md  README.md  SOLUTIONS_EXPLOREES.md  config.yaml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  readme_presentation.md  reef-mooring-sim.html  reef_3d.py  reef_export.py  run.py
coral_sim/: __main__.py  anchor_sim.py  colony.py  mooring.py  viz.py
coral_sim/terrain/: __init__.py  __main__.py  allen.py  io.py  procedural.py
docker/: entrypoint.sh
experiments/: .gitignore
mooring-sim/: .gitignore  Dockerfile  index.html  package.json  vite.config.js
mooring-sim/api/: coverage.py
mooring-sim/coverage-web-test/: package.json  serve.py  server.js  server.ts
mooring-sim/coverage-web-test/public/: index.html
mooring-sim/coverage-web-test/public/js/: allen.js  app.js  kjma.js  map-picker.js  viewer.js
mooring-sim/src/: coverage.js  export.js  i18n.js  main.js  objects.js  params.js  physics.js  presentation.css  presentation.js  scene.js  shaders.js  social.config.js  style.css  tabs.js  theme.js  ui.js
tools/: reef_3d.py
