[project]
name = "coral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "shapely>=2.0",
    "scipy>=1.14",
    "opensimplex>=0.4",
    "trimesh>=4.0",
    "scikit-image>=0.24",
    "numba>=0.60",
]
